--- a/lycheepy/wps/pywps.cfg
+++ b/lycheepy/wps/pywps.cfg
@@ -26,7 +26,7 @@ contact_role=pointOfContact
 maxsingleinputsize=10mb
 maxrequestsize=30mb
 url=http://gpc:5000/wps
-outputurl=http://gpc:5000/outputs/
+outputurl=http://gpc:5000/wps/outputs/
 outputpath=/home/gpc/src/lycheepy/lycheepy/wps/outputs
 workdir=/home/gpc/src/lycheepy/lycheepy/wps/workdir
 maxprocesses=10
