Product directory is now component-oriented organized

--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -3,40 +3,39 @@ services:
     # Geospatial repository
     # Exposes OGC services and a configuration API through the 8080 port
     repository:
-        build: ./repository/
+        build: repository
         expose:
         - "8080"
     # Exposes the WPS interface
     # Publishes on the Broker
     wps:
-        build: ./wps/
+        build: ../install/compose/wps
         expose:
         - "80"
     # Exposes a configuration API
     configuration:
-        build: ./configuration/
+        build: ../install/compose/configuration
         expose:
         - "80"
 
     # Reverse proxy to the Repository, WPS, and Configuration
     proxy:
-        build: ./proxy/
+        build: proxy
         ports:
         - "80:80"
- 
+
     # Persists the Configuration
     persistence:
-        build: ./persistence/
+        build: persistence
         expose:
         - "5432"
 
     # Receives tasks from the WPS, which are consumed by the Workers
     broker:
-        build: ./broker/
+        build: broker
         expose:
         - "5672"
-    
+
     # Consumes from the broker
     worker:
-        build: ./worker/
-
+        build: worker
