--- a/lycheepy/wps/pywps.cfg
+++ b/lycheepy/wps/pywps.cfg
@@ -25,8 +25,8 @@ contact_role=pointOfContact
 [server]
 maxsingleinputsize=10mb
 maxrequestsize=30mb
-url=http://gpc:5000/wps
-outputurl=http://gpc:5000/wps/outputs/
+url=http://wps:5000/wps
+outputurl=http://wps:5000/wps/outputs/
 outputpath=/home/gpc/src/lycheepy/lycheepy/wps/outputs
 workdir=/home/gpc/src/lycheepy/lycheepy/wps/workdir
 maxprocesses=10
