Improve Repository Dokerfile

--- a/lycheepy/repository/Dockerfile
+++ b/lycheepy/repository/Dockerfile
@@ -12,14 +12,11 @@ RUN apt-get install -y oracle-java8-installer
 
 # Install Geoserver
 RUN apt-get install -y wget unzip
-
 RUN wget https://razaoinfo.dl.sourceforge.net/project/geoserver/GeoServer/2.12.2/geoserver-2.12.2-bin.zip -O geoserver.zip
 RUN mkdir -p /usr/share/geoserver
 RUN unzip geoserver.zip -d /usr/share/geoserver
-
 RUN echo "export GEOSERVER_HOME=/usr/share/geoserver" >> ~/.profile
 RUN . ~/.profile
-
 RUN chown -R root /usr/share/geoserver/
 
 # Install CSW extension
@@ -29,9 +26,5 @@ RUN unzip -o csw.zip -d /usr/share/geoserver/geoserver-2.12.2/webapps/geoserver/
 # Enable CORS
 RUN sed -i '/^#.* CORS /s/^#//' /usr/share/geoserver/geoserver-2.12.2/webapps/geoserver/WEB-INF/web.xml
 
-#RUN wget http://central.maven.org/maven2/org/eclipse/jetty/jetty-servlets/9.2.13.v20150730/jetty-servlets-9.2.13.v20150730.jar -O jetty-servlets-9.2.13.v20150730.jar
-#RUN mv jetty-servlets-9.2.13.v20150730.jar /usr/share/geoserver/geoserver-2.12.2/webapps/geoserver/WEB-INF/lib
-
-
+# Start Geoserver
 CMD cd /usr/share/geoserver/geoserver-2.12.2/bin/; sh startup.sh
-
