--- a/lycheepy/configuration/configuration.conf
+++ b/lycheepy/configuration/configuration.conf
@@ -9,4 +9,4 @@ setgid www-data
 
 env PATH=/home/root/venv/bin
 chdir /home/root
-exec gunicorn --workers 3 --bind unix:myproject.sock -m 007 wsgi
+exec gunicorn --w 5 -b 0.0.0.0:80 -m 007 wsgi
