Configuration component installation

--- a/lycheepy/configuration/configuration.conf
+++ b/lycheepy/configuration/configuration.conf
@@ -7,6 +7,6 @@ respawn
 setuid root
 setgid www-data
 
-env PATH=/home/root/venv/bin
-chdir /home/root
+env PATH=/root/venv/bin
+chdir /root
 exec gunicorn --w 5 -b 0.0.0.0:80 -m 007 wsgi
