--- a/lycheepy/configuration/Dockerfile
+++ b/lycheepy/configuration/Dockerfile
@@ -1,17 +1,15 @@
-FROM ubuntu:16.04
+FROM python:2
 
 ADD requirements.txt /root/
-ADD configuration/ /root/
+ADD configuration/ /root/configuration/
 ADD configuration.conf /etc/init/
-
-RUN apt-get update && apt-get upgrade -y
-
-RUN apt-get install -y python2.7 virtualenv
 
 WORKDIR /root/
 
 RUN virtualenv venv
 
 RUN /root/venv/bin/pip install -r requirements.txt
+
+RUN /root/venv/bin/python /root/configuration/models.py
 
 CMD start configuration
