--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -1,41 +1,38 @@
-version: '2'
+version: '3'
 services:
-    # Geospatial repository
-    # Exposes OGC services and a configuration API through the 8080 port
-    repository:
-        build: repository
-        expose:
-        - "8080"
-    # Exposes the WPS interface
-    # Publishes on the Broker
-    wps:
-        build: wps
-        expose:
-        - "80"
-    # Exposes a configuration API
-    configuration:
-        build: configuration
-        expose:
-        - "80"
-
-    # Reverse proxy to the Repository, WPS, and Configuration
-    proxy:
-        build: proxy
-        ports:
-        - "80:80"
-
-    # Persists the Configuration
     persistence:
         build: persistence
         expose:
         - "5432"
-
-    # Receives tasks from the WPS, which are consumed by the Workers
+    configuration:
+        build: configuration
+        expose:
+        - "80"
+        depends_on:
+          - persistence
     broker:
         build: broker
         expose:
         - "5672"
-
-    # Consumes from the broker
+    wps:
+        build: wps
+        expose:
+        - "80"
+        depends_on:
+          - configuration
+    repository:
+        build: repository
+        expose:
+        - "8080"
+    proxy:
+        build: proxy
+        ports:
+        - "80:80"
+        depends_on:
+          - configuration
+          - wps
+          - repository
     worker:
         build: worker
+        depends_on:
+          - broker
