Make some progress with the Configuration component

--- a/lycheepy/configuration/Dockerfile
+++ b/lycheepy/configuration/Dockerfile
@@ -3,13 +3,11 @@ FROM python:2
 ADD requirements.txt /root/
 ADD configuration/ /root/configuration/
 ADD configuration.conf /etc/init/
+ADD wait-for-persistence.sh /root/
 
 WORKDIR /root/
 
 RUN virtualenv venv
-
 RUN /root/venv/bin/pip install -r requirements.txt
 
-RUN /root/venv/bin/python /root/configuration/models.py
-
-CMD start configuration
+CMD ./wait-for-persistence.sh; /root/venv/bin/python /root/configuration/models.py; start configuration
