--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -1,38 +1,44 @@
 version: '3'
 services:
-    persistence:
-        build: persistence
-        expose:
-        - "5432"
-    configuration:
-        build: configuration
-        expose:
-        - "80"
-        depends_on:
-          - persistence
-    broker:
-        build: broker
-        expose:
-        - "5672"
-    wps:
-        build: wps
-        expose:
-        - "80"
-        depends_on:
-          - configuration
-    repository:
-        build: repository
-        expose:
-        - "8080"
-    proxy:
-        build: proxy
-        ports:
-        - "80:80"
-        depends_on:
-          - configuration
-          - wps
-          - repository
-    worker:
-        build: worker
-        depends_on:
-          - broker
+  persistence:
+    build: persistence
+    expose:
+      - "5432"
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: lycheepy
+      POSTGRES_PASS: lycheepy
+      POSTGRES_DBNAME: lycheepy
+  configuration:
+    build: configuration
+    expose:
+      - "80"
+    depends_on:
+      - persistence
+  broker:
+    build: broker
+    expose:
+      - "5672"
+  wps:
+    build: wps
+    expose:
+      - "80"
+    depends_on:
+      - configuration
+  repository:
+    build: repository
+    expose:
+      - "8080"
+  proxy:
+    build: proxy
+    ports:
+      - "80:80"
+    depends_on:
+      - configuration
+      - wps
+      - repository
+  worker:
+    build: worker
+    depends_on:
+      - broker
