The Persistence, Configuration, Repository and Proxy components are now operational!

--- a/lycheepy/configuration/Dockerfile
+++ b/lycheepy/configuration/Dockerfile
@@ -2,12 +2,13 @@ FROM python:2
 
 ADD requirements.txt /root/
 ADD configuration/ /root/configuration/
-ADD configuration.conf /etc/init/
-ADD wait-for-persistence.sh /root/
+ADD wait-service.sh /root/
 
 WORKDIR /root/
 
 RUN virtualenv venv
 RUN /root/venv/bin/pip install -r requirements.txt
 
-CMD ./wait-for-persistence.sh; /root/venv/bin/python /root/configuration/models.py; start configuration
+CMD ./wait-service.sh persistence 5432; \
+    /root/venv/bin/python /root/configuration/models.py; \
+    cd /root/configuration; /root/venv/bin/gunicorn -b 0.0.0.0:80 wsgi
