--- a/lycheepy/proxy/Dockerfile
+++ b/lycheepy/proxy/Dockerfile
@@ -1,9 +1,3 @@
 FROM nginx
 
-ADD lycheepy /etc/nginx/sites-enabled/
-
-RUN nginx -c /etc/nginx/sites-enabled/lycheepy -t
-
-RUN service nginx reload
-
-CMD ["nginx", "-g", "daemon off;"]
+COPY nginx.conf /etc/nginx/nginx.conf
