The WPS component also started working!

--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -25,17 +25,17 @@ contact_role=pointOfContact
 [server]
 maxsingleinputsize=10mb
 maxrequestsize=30mb
-url=http://wps:5000/wps
-outputurl=http://wps:5000/wps/outputs/
-outputpath=/home/gpc/src/lycheepy/lycheepy/wps/outputs
-workdir=/home/gpc/src/lycheepy/lycheepy/wps/workdir
+url=http://wps/wps
+outputurl=http://wps/wps/outputs/
+outputpath=/root/wps/outputs
+workdir=/root/wps/workdir
 maxprocesses=10
 parallelprocesses=20
 
 [logging]
 level=INFO
-file=/home/gpc/src/lycheepy/lycheepy/wps/logs/pywps.log
-database=sqlite:////home/gpc/src/lycheepy/lycheepy/wps/logs/pywps-logs.sqlite3
+file=/root/wps/logs/pywps.log
+database=sqlite:////root/wps/logs/pywps-logs.sqlite3
 
 [grass]
 gisbase=/usr/local/grass-7.3.svn/
