Ignore pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 venv/
 .idea/
+*.pyc
 lycheepy/wps/outputs/*.xml
 lycheepy/wps/logs/*.log
 lycheepy/wps/logs/*.sqlite*
 lycheepy/wps/workdir/*.xml
-tests/cosmo-skymed/*
