--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lycheepy/configuration/configuration/lycheepy.index"]
 	path = lycheepy/configuration/configuration/index
 	url = https://github.com/gabrielbazan/lycheepy.index.git
+[submodule "lycheepy/configuration/configuration/lycheepy.processes"]
+	path = lycheepy/configuration/configuration/processes/lycheepy.processes
+	url = https://github.com/gabrielbazan/lycheepy.processes.git
