--- a/lycheepy/proxy/nginx.conf
+++ b/lycheepy/proxy/nginx.conf
@@ -14,8 +14,8 @@ http {
             proxy_pass http://wps/;
         }
 
-        location /repository/ {
-            proxy_pass http://repository:8080/;
-        }
+        #location /repository/ {
+        #    proxy_pass http://repository:8080/;
+        #}
     }
 }
