Processes can now be uploaded, discovered, edited, and executed! All this involving all the LycheePy components!

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lycheepy/configuration/configuration/gateways/lycheepy.processes"]
 	path = lycheepy/configuration/configuration/gateways/processes
 	url = https://github.com/gabrielbazan/lycheepy.processes.git
+[submodule "lycheepy/worker/worker/gateways/lycheepy.processes"]
+	path = lycheepy/worker/worker/gateways/processes
+	url = https://github.com/gabrielbazan/lycheepy.processes.git
