--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -15,16 +15,18 @@ services:
     depends_on:
       - persistence
       - processes
-#  broker:
-#    build: broker
-#    expose:
-#      - "5672"
+  broker:
+    build: broker
+    expose:
+      - "5672"
   wps:
     build: wps
     expose:
       - "80"
     depends_on:
       - configuration
+    volumes:
+      - workdir:/root/workdir
 #  repository:
 #    build: repository
 #    expose:
@@ -37,11 +39,13 @@ services:
       - configuration
       - wps
 #      - repository
-#  worker:
-#    build: worker
-#    depends_on:
-#      - broker
-#      - processes
+  worker:
+    build: worker
+    depends_on:
+      - broker
+      - processes
+    volumes:
+      - workdir:/root/workdir
   processes:
     build: processes
     expose:
@@ -51,3 +55,5 @@ services:
       FTP_USER: lycheepy
       FTP_PASS: lycheepy
       LOG_STDOUT: "true"
+volumes:
+  workdir:
