--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -1,41 +1,46 @@
 [metadata:main]
 identification_title=LycheePy Server
-identification_abstract=PyWPS testing and development server. Do NOT use this server in production environement. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials.
-identification_keywords=LycheePy,WPS,PyWPS,Demo,Dev
+identification_abstract=LycheePy is a geospatial data processing server that allows you to expose predeterminated chains, and executes them in a distributed way. Also, it can be directly integrated with geospatial repositories, so you can configure these chains to automaticly publish outputs into them
+identification_keywords=LycheePy,WPS,PyWPS,Processes,Geospatial,Distribution,Automatic,Products,Publication,Repositories
 identification_keywords_type=theme
 identification_fees=None
 identification_accessconstraints=None
-provider_name=PyWPS Developement team
-provider_url=http://pywps.org/'
-contact_name=Your Name
+provider_name=LycheePy Development Team
+provider_url=http://lycheepy.org/
+contact_name=Gabriel Jose Bazan
 contact_position=Developer
-contact_address=My Street
-contact_city=My City
-contact_stateorprovince=None
-contact_postalcode=000 00
+contact_address=Somewhere in space-time
+contact_city=Ciudad Autonoma de Buenos Aires
+contact_stateorprovince=Argentina
+contact_postalcode=0
 contact_country=World, Internet
-contact_phone=+00 00 11 22 33
-contact_fax=+00 99 88 77 66
-contact_email=info@yourdomain.org
-contact_url=http://pywps.org
-contact_hours=8:00-20:00UTC
-contact_instructions=Knock on the door
-contact_role=pointOfContact
+contact_phone=+54
+contact_fax=+54
+contact_email=gbazan@outlook.com
+contact_url=http://lycheepy.org
+contact_hours=12:00-20:00UTC
+contact_instructions=Knock on the heavens door
+contact_role=hallo
 
 [server]
 maxsingleinputsize=10mb
 maxrequestsize=30mb
 url=http://wps/wps
 outputurl=http://wps/wps/outputs/
+# outputurl=http://192.168.1.108:5001/outputs/
 outputpath=/root/wps/outputs
+# outputpath=/home/lychee/lycheepy/lycheepy/wps/wps/outputs
 workdir=/root/wps/workdir
+# workdir=/home/lychee/lycheepy/lycheepy/wps/wps/workdir
 maxprocesses=10
 parallelprocesses=20
 
 [logging]
 level=INFO
 file=/root/wps/logs/pywps.log
+# file=/home/lychee/lycheepy/lycheepy/wps/wps/logs/pywps.log
 database=sqlite:////root/wps/logs/pywps-logs.sqlite3
+# database=sqlite:////home/lychee/lycheepy/lycheepy/wps/wps/logs/pywps-logs.sqlite3
 
 [grass]
 gisbase=/usr/local/grass-7.3.svn/
