--- a/lycheepy/configuration/Dockerfile
+++ b/lycheepy/configuration/Dockerfile
@@ -9,9 +9,9 @@ WORKDIR /root/
 RUN virtualenv venv
 RUN /root/venv/bin/pip install -r requirements.txt
 
-CMD ./wait-service.sh persistence 5432; \
-    ./wait-service.sh processes 21; \
-    /root/venv/bin/python /root/configuration/models.py; \
-    /root/venv/bin/python /root/configuration/parametric.py; \
+CMD ./wait-service.sh persistence 5432 && \
+    ./wait-service.sh processes 21 && \
+    /root/venv/bin/python /root/configuration/models.py && \
+    /root/venv/bin/python /root/configuration/parametric.py && \
     cd /root/configuration; /root/venv/bin/gunicorn -b 0.0.0.0:80 wsgi
     #/root/venv/bin/python /root/configuration/app.py
