Now chains can be executed, and products are automatically publishedgit add -A

--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -27,10 +27,10 @@ services:
       - configuration
     volumes:
       - workdir:/root/workdir
-#  repository:
-#    build: repository
-#    expose:
-#      - "8080"
+  repository:
+    build: repository
+    expose:
+      - "8080"
   proxy:
     build: proxy
     ports:
@@ -38,7 +38,7 @@ services:
     depends_on:
       - configuration
       - wps
-#      - repository
+      - repository
   worker:
     build: worker
     depends_on:
