Add Executions component, and its Persistence instance. Chains execution status are now notified to this component, which is also exposed through the Proxy.

--- a/lycheepy/proxy/nginx.conf
+++ b/lycheepy/proxy/nginx.conf
@@ -14,6 +14,10 @@ http {
             proxy_pass http://wps/;
         }
 
+        location /executions/ {
+            proxy_pass http://executions/;
+        }
+
         location /repository/ {
             proxy_pass http://repository:8080/;
         }
