--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - "80"
     depends_on:
       - configuration
+      - broker
+      - executions
     volumes:
       - workdir:/root/workdir
   repository:
@@ -55,5 +57,19 @@ services:
       FTP_USER: lycheepy
       FTP_PASS: lycheepy
       LOG_STDOUT: "true"
+  executions-persistence:
+    build: persistence
+    expose:
+      - "5432"
+    environment:
+      POSTGRES_USER: lycheepy
+      POSTGRES_PASSWORD: lycheepy
+      POSTGRES_DB: lycheepy
+  executions:
+    build: executions
+    expose:
+      - "80"
+    depends_on:
+      - executions-persistence
 volumes:
   workdir:
