This branch shows how to implement the capability of interaction with other kinds of repositories, by being able to perform automatic products publication into FTPs repositories.

--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -71,5 +71,18 @@ services:
       - "80"
     depends_on:
       - executions-persistence
+  ftp_repository:
+    build: ftp_repository
+    expose:
+      - "20"
+      - "21"
+    environment:
+      FTP_USER: lycheepy
+      FTP_PASS: lycheepy
+      LOG_STDOUT: "true"
+    ports:
+      - "20:20"
+      - "21:21"
+      - "21100-21110:21100-21110"
 volumes:
   workdir:
