Adjustments for remote inputs support

--- a/lycheepy/docker-compose.yml
+++ b/lycheepy/docker-compose.yml
@@ -29,10 +29,10 @@ services:
       - executions
     volumes:
       - workdir:/root/workdir
-  repository:
-    build: repository
-    expose:
-      - "8080"
+#  repository:
+#    build: repository
+#    expose:
+#      - "8080"
   proxy:
     build: proxy
     ports:
@@ -40,7 +40,7 @@ services:
     depends_on:
       - configuration
       - wps
-      - repository
+#      - repository
   worker:
     build: worker
     depends_on:
