--- a/lycheepy/proxy/nginx.conf
+++ b/lycheepy/proxy/nginx.conf
@@ -18,8 +18,8 @@ http {
             proxy_pass http://executions/;
         }
 
-        location /repository/ {
-            proxy_pass http://repository:8080/;
-        }
+#        location /repository/ {
+#            proxy_pass http://repository:8080/;
+#        }
     }
 }
