--- a/lycheepy/wps/Dockerfile
+++ b/lycheepy/wps/Dockerfile
@@ -9,9 +9,12 @@ WORKDIR /root/
 RUN virtualenv venv
 RUN /root/venv/bin/pip install -r requirements.txt
 
-RUN mkdir /root/wps/outputs
-RUN mkdir /root/wps/workdir
-RUN mkdir /root/wps/logs
+RUN /root/venv/bin/pip install -e git+https://github.com/geopython/pywps.git@master#egg=pywps-dev
+RUN /root/venv/bin/pip install flufl.enum
+
+RUN mkdir /root/outputs
+RUN mkdir /root/workdir
+RUN mkdir /root/logs
 
 CMD ./wait-service.sh configuration 80 && \
     cd /root/wps; /root/venv/bin/gunicorn -b 0.0.0.0:80 wsgi
