--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -27,15 +27,15 @@ maxsingleinputsize=10mb
 maxrequestsize=30mb
 url=http://wps/wps
 outputurl=http://wps/wps/outputs/
-outputpath=/root/wps/outputs
-workdir=/root/wps/workdir
+outputpath=/root/outputs
+workdir=/root/workdir
 maxprocesses=10
 parallelprocesses=20
 
 [logging]
 level=INFO
-file=/root/wps/logs/pywps.log
-database=sqlite:////root/wps/logs/pywps-logs.sqlite3
+file=/root/logs/pywps.log
+database=sqlite:////root/logs/pywps-logs.sqlite3
 
 [grass]
 gisbase=/usr/local/grass-7.3.svn/
