Make chain process execution task configurable, and cosmetics

--- a/lycheepy/worker/Dockerfile
+++ b/lycheepy/worker/Dockerfile
@@ -2,7 +2,6 @@ FROM python:2
 
 ADD requirements.txt /root/
 ADD worker/ /root/worker/
-ADD workdir/ /root/workdir/
 ADD wait-service.sh /root/
 
 WORKDIR /root/
@@ -14,6 +13,7 @@ RUN /root/venv/bin/pip install -e git+https://github.com/geopython/pywps.git@mas
 RUN /root/venv/bin/pip install flufl.enum
 
 RUN mkdir /root/worker/processes/
+RUN mkdir /root/workdir/
 
 CMD ./wait-service.sh broker 5672 && \
     cd /root/worker; /root/venv/bin/celery -A distribution.worker worker --loglevel=info
