--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -1,6 +1,6 @@
 [metadata:main]
 identification_title=LycheePy Server
-identification_abstract=LycheePy is a geospatial data processing server that allows you to expose predeterminated chains, and executes them in a distributed way. Also, it can be directly integrated with geospatial repositories, so you can configure these chains to automaticly publish outputs into them
+identification_abstract=LycheePy is a distributed processing server which allows the publication of pre-defined processing chains through a WPS interface, implemented with PyWPS. In addition, it provides direct integration with repositories (e.g. GeoServer, FTP servers, or you own integration), allowing the automatic publication of processing results.
 identification_keywords=LycheePy,WPS,PyWPS,Processes,Geospatial,Distribution,Automatic,Products,Publication,Repositories
 identification_keywords_type=theme
 identification_fees=None
@@ -9,24 +9,28 @@ provider_name=LycheePy Development Team
 provider_url=http://lycheepy.org/
 contact_name=Gabriel Jose Bazan
 contact_position=Developer
+contact_stateorprovince=Somewhere
+contact_city=Space-time
 contact_address=Somewhere in space-time
-contact_city=Ciudad Autonoma de Buenos Aires
-contact_stateorprovince=Argentina
 contact_postalcode=0
 contact_country=World, Internet
-contact_phone=+54
-contact_fax=+54
+contact_phone=+00
+contact_fax=+00
 contact_email=gbazan@outlook.com
-contact_url=http://lycheepy.org
+contact_url=https://github.com/gabrielbazan/lycheepy
 contact_hours=12:00-20:00UTC
 contact_instructions=Knock on the heavens door
-contact_role=hallo
+contact_role=LycheePy Development Team
 
 [server]
 maxsingleinputsize=10mb
 maxrequestsize=30mb
-url=http://wps/wps
-outputurl=http://wps/wps/outputs/
+
+#url=http://{host_name_or_ip}/wps
+#outputurl=http://{host_name_or_ip}/wps/outputs/
+url=http://192.168.0.57/wps
+outputurl=http://192.168.0.57/wps/outputs/
+
 outputpath=/root/outputs
 workdir=/root/workdir
 maxprocesses=10
@@ -36,6 +40,3 @@ parallelprocesses=20
 level=INFO
 file=/root/logs/pywps.log
 database=sqlite:////root/logs/pywps-logs.sqlite3
-
-[grass]
-gisbase=/usr/local/grass-7.3.svn/
