Increase default timeout for processes group execution. Temporarily process resources cleaning.

--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -25,19 +25,14 @@ contact_role=LycheePy Development Team
 [server]
 maxsingleinputsize=10mb
 maxrequestsize=30mb
-
-#url=http://{host_name_or_ip}/wps
-#outputurl=http://{host_name_or_ip}/wps/outputs/
-url=http://192.168.0.57/wps
-outputurl=http://192.168.0.57/wps/outputs/
-
+url=http://{host_name_or_ip}
+outputurl=http://{host_name_or_ip}/outputs/
 outputpath=/root/outputs
 workdir=/root/workdir
 maxprocesses=10
 parallelprocesses=20
 
 [logging]
-level=INFO
+level=DEBUG
 file=/root/logs/pywps.log
 database=sqlite:////root/logs/pywps-logs.sqlite3
-
