Use Ubuntu 16.04 con configuration, executions, worker, and wps containers. Freeze PyWPS on a specific commit, because some weird bug has been recently introduced

--- a/lycheepy/configuration/Dockerfile
+++ b/lycheepy/configuration/Dockerfile
@@ -1,9 +1,12 @@
-FROM python:2
+FROM ubuntu:16.04
+
+RUN apt update && apt upgrade -y
 
 WORKDIR /root/
 
 ADD requirements.txt /root/
 
+RUN apt install python2.7 python-virtualenv -y
 RUN virtualenv venv
 RUN /root/venv/bin/pip install -r requirements.txt
 
