Set PyWPS loglevel as INFO, so the SQLAlchemy engine does not log everything. Processes are now executed within a context, which removes the process module from the system path when it fishes

--- a/lycheepy/wps/wps/pywps.cfg
+++ b/lycheepy/wps/wps/pywps.cfg
@@ -33,6 +33,6 @@ maxprocesses=10
 parallelprocesses=20
 
 [logging]
-level=DEBUG
+level=INFO
 file=/root/logs/pywps.log
 database=sqlite:////root/logs/pywps-logs.sqlite3
